# avanza-research-terminal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  conftest.py  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
examples/: sample_portfolio.csv
src/: __init__.py  config.py
src/alerts/: __init__.py  email.py  telegram.py
src/backtest/: __init__.py  backtester.py  walk_forward.py
src/dashboard/: app.py  ui.py  views_alerts.py  views_crypto.py  views_overview.py  views_portfolio.py  views_screen.py
src/data/: __init__.py  base.py  borsdata_client.py  eodhd_client.py  finnhub_client.py  fx_client.py  mock_provider.py  news_client.py  provider.py  yahoo_client.py
src/engine/: __init__.py  market_hours.py  notify.py  scanner.py  scheduler.py  signals.py
src/models/: __init__.py  schemas.py
src/portfolio/: __init__.py  crypto_account.py  import_avanza_csv.py  opportunity_cost.py  sizing.py
src/reports/: __init__.py  citation_manager.py  memo_generator.py  templates.py
src/scoring/: __init__.py  catalysts.py  composite.py  crypto.py  fundamentals.py  risk.py  technicals.py
src/storage/: __init__.py  db.py  migrations.py
src/universe/: __init__.py  crypto.py  eu.py  filters.py  stockholm.py  us.py
src/utils/: __init__.py  currency.py  dates.py  logging.py
tests/: test_analyst.py  test_backtest.py  test_clients.py  test_crypto.py  test_dashboard.py  test_data_provider.py  test_engine_signals.py  test_guardrails.py  test_improvements.py  test_market_hours.py  test_portfolio.py  test_portfolio_import.py  test_reports.py  test_scanner.py  test_schemas.py  test_scoring.py  test_sizing.py
